# flag-geo-game

./: .dockerignore  .gitignore  README.md  buf.gen.yaml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: deploy.yml
proto/flaggeo/v1/: flaggeo.proto
scripts/: gen-data.mjs  gen-flag-twins.mjs  gen-protocol.mjs  gen-server-data.mjs  grpc-smoke.ts  ws-smoke.mjs
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
server/.cargo/: config.toml
server/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  pb.rs  protocol.rs  rate_limit.rs  state.rs  validate.rs
server/src/game/: countries.rs  flag_twins.rs  mod.rs  pool.rs
server/src/grpc/: auth_svc.rs  convert.rs  game_svc.rs  mod.rs  room_svc.rs
server/src/http/: mod.rs
server/src/room/: actor.rs  mod.rs  scoring.rs
server/src/ws/: conn.rs  mod.rs  protocol.rs
src/: App.tsx  main.tsx  styles.css
src-tauri/: tauri.conf.json
src/components/: DifficultyPicker.tsx  Feedback.tsx  Flag.tsx  FlagPrompt.tsx  GameControls.tsx  RoundBoard.tsx  StatsRow.tsx  Timer.tsx  WorldMap.tsx
src/data/: countries.json  countries.ts
src/game/: challenge.test.ts  challenge.ts  difficulty.ts  flagTwins.generated.ts  flagTwins.test.ts  flagTwins.ts  modes.ts  pool.test.ts  pool.ts  sound.ts  stats.test.ts  stats.ts  types.ts
src/i18n/: index.ts  ui.ts
src/i18n/locales/: en.json  ru.json
src/map/: world.ts
src/online/: AvatarPicker.tsx  ConnectPanel.tsx  Leaderboard.tsx  Lobby.tsx  MatchResults.tsx  OnlineRound.tsx  RoomList.tsx  RoomSettings.tsx  Scoreboard.tsx  eventStream.ts  lobbyStream.ts  protocol.ts  rest.ts  transport.ts  wsClient.ts
src/online/bindings/: ClientMsg.ts  DifficultyFilter.ts  FinalStanding.ts  LeaderboardRow.ts  Player.ts  RoomConfig.ts  RoomInfo.ts  RoomSummary.ts  RoundPlayerResult.ts  ServerMsg.ts  Standing.ts
src/screens/: ChallengeScreen.tsx  GameScreen.tsx  HistoryScreen.tsx  OnlineScreen.tsx  SettingsScreen.tsx
src/store/: gameStore.ts  historyStore.ts  onlineStore.ts  settingsStore.ts  uiStore.ts
