[package]
name = "flag-geo-server"
version = "0.1.0"
edition = "2021"
description = "Dedicated multiplayer server for Flag Geo"
license = "AGPL-3.0-only"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "time", "signal", "sync"] }
tower-http = { version = "0.6.11", features = ["cors", "trace"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rusqlite = { version = "0.40.1", features = ["bundled"] }
jsonwebtoken = "10.4.0"
argon2 = { version = "0.5.3", features = ["std"] }
rand = "0.10.1"
uuid = { version = "1.23.3", features = ["v4"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
dotenvy = "0.15.7"
futures-util = "0.3.32"
ts-rs = "12.0.1"

[profile.release]
strip = true
lto = "thin"
